Plnění DB daty v "dev" profilu